# TrainingEI

./: CMakeLists.txt  MyStudentSystem.cpp  README.md
include/: Base.h  DisplayAllOperations.h  DisplayOperations.h  Operations.h
src/: Base.cpp  DisplayAllOperations.cpp  DisplayOperations.cpp  Operations.cpp
